--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2378,7 +2378,7 @@ input, select, textarea {
 			font-size: 1.15em;
 			letter-spacing: 0.05em;
 		}
-		.project_desc {
+		.project-description {
 		    height: 60px;
 		}
 
